@startuml

title __AGGREGATEOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.mongo {
    namespace aggregateOperators {
      abstract class gr.ds.unipi.noda.api.mongo.aggregateOperators.AggregateOperator {
          + getOperatorExpression()
          # AggregateOperator()
          {abstract} # getOperatorJsonField()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace aggregateOperators {
      class gr.ds.unipi.noda.api.mongo.aggregateOperators.MongoDBAggregateOperatorFactory {
          + newOperatorAvg()
          + newOperatorCount()
          + newOperatorCountDistinct()
          + newOperatorCountNonNull()
          + newOperatorMax()
          + newOperatorMin()
          + newOperatorSum()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace aggregateOperators {
      class gr.ds.unipi.noda.api.mongo.aggregateOperators.OperatorAvg {
          {static} + newOperatorAvg()
          # getOperatorJsonField()
          - OperatorAvg()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace aggregateOperators {
      class gr.ds.unipi.noda.api.mongo.aggregateOperators.OperatorCount {
          + getOperatorExpression()
          {static} + newOperatorCount()
          # getOperatorJsonField()
          - OperatorCount()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace aggregateOperators {
      class gr.ds.unipi.noda.api.mongo.aggregateOperators.OperatorCountNonNull {
          + getOperatorExpression()
          {static} + newOperatorCountNonNull()
          # getOperatorJsonField()
          - OperatorCountNonNull()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace aggregateOperators {
      class gr.ds.unipi.noda.api.mongo.aggregateOperators.OperatorMax {
          {static} + newOperatorMax()
          # getOperatorJsonField()
          - OperatorMax()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace aggregateOperators {
      class gr.ds.unipi.noda.api.mongo.aggregateOperators.OperatorMin {
          {static} + newOperatorMin()
          # getOperatorJsonField()
          - OperatorMin()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.mongo {
    namespace aggregateOperators {
      class gr.ds.unipi.noda.api.mongo.aggregateOperators.OperatorSum {
          {static} + newOperatorSum()
          # getOperatorJsonField()
          - OperatorSum()
      }
    }
  }
  

  gr.ds.unipi.noda.api.mongo.aggregateOperators.AggregateOperator -up-|> gr.ds.unipi.noda.api.core.operators.aggregateOperators.AggregateOperator
  gr.ds.unipi.noda.api.mongo.aggregateOperators.MongoDBAggregateOperatorFactory -up-|> gr.ds.unipi.noda.api.core.operators.aggregateOperators.BaseAggregateOperatorFactory
  gr.ds.unipi.noda.api.mongo.aggregateOperators.OperatorAvg -up-|> gr.ds.unipi.noda.api.mongo.aggregateOperators.AggregateOperator
  gr.ds.unipi.noda.api.mongo.aggregateOperators.OperatorCount -up-|> gr.ds.unipi.noda.api.mongo.aggregateOperators.AggregateOperator
  gr.ds.unipi.noda.api.mongo.aggregateOperators.OperatorCountNonNull -up-|> gr.ds.unipi.noda.api.mongo.aggregateOperators.AggregateOperator
  gr.ds.unipi.noda.api.mongo.aggregateOperators.OperatorMax -up-|> gr.ds.unipi.noda.api.mongo.aggregateOperators.AggregateOperator
  gr.ds.unipi.noda.api.mongo.aggregateOperators.OperatorMin -up-|> gr.ds.unipi.noda.api.mongo.aggregateOperators.AggregateOperator
  gr.ds.unipi.noda.api.mongo.aggregateOperators.OperatorSum -up-|> gr.ds.unipi.noda.api.mongo.aggregateOperators.AggregateOperator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
